--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,11 +3,18 @@
   <color name="colorPrimary">#3F51B5</color>
   <color name="colorPrimaryDark">#303F9F</color>
   <color name="colorAccent">#FF4081</color>
+  <color name="fabButtonColor">#80cbc4</color>
+  <color name="heart_rate_value_text_color">#FFEB3B</color>
   <color name="list_section_header_background">#424242</color>
   <color name="list_header_text">#9E9E9E</color>
   <color name="list_item_background">#323334</color>
   <color name="list_divider">#757575</color>
   <color name="list_button">#2196F3</color>
-  <color name="list_secondary_text">#EEEEEE</color>
-  <color name="list_primary_text">#FAFAFA</color>
+  <color name="primary_text">#FAFAFA</color>
+  <color name="secondary_text">#EEEEEE</color>
+
+  <color name="chart_background">#3F3F3F</color>
+  <color name="chart_line">#36ABC3</color>
+  <color name="chart_grid_color">#868686</color>
+  <color name="chart_peak">#FF8000</color>
 </resources>
