--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,8 +6,14 @@
   <dimen name="fab_margin">16dp</dimen>
   <dimen name="title_text_size">18dp</dimen>
   <dimen name="value_text_size">28dp</dimen>
+  <dimen name="title_padding">10dp</dimen>
   <dimen name="device_list_title_padding">2dp</dimen>
   <dimen name="device_list_text_size">10dp</dimen>
   <dimen name="device_list_name_size">12dp</dimen>
   <dimen name="device_list_address_size">8dp</dimen>
+
+
+  <dimen name="chart_title_text_size_normal">10sp</dimen>
+  <dimen name="chart_x_label_text_size_normal">8sp</dimen>
+  <dimen name="chart_y_label_text_size_normal">6sp</dimen>
 </resources>
